--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
 <body>
 
   <!-- Header / Navbar -->
+  header {
+  background-color: var(--color-white);
+  padding: 20px 0;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+header .logo h1 span {
+  color: var(--color-primary);
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 25px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: var(--color-text);
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+nav ul li a:hover {
+  color: var(--color-primary);
+}
+
   <header>
     <div class="container">
       <div class="logo">
