--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
   <!-- Header / Navbar -->
   <header>
-    <div class="menu-toggle">&#9776;</div>
-    <div class="container">
+    <div class="menu-toggle">&#9776;
       <div class="logo">
         <h1><span>Skill</span> Linkr</h1>
       </div>
