--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- Header / Navbar -->
   <header>
     <div class="menu-toggle">&#9776;
+      div class="container">
       <div class="logo">
         <h1><span>Skill</span> Linkr</h1>
       </div>
