--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<section id="home" class="hero">
+  <div class="container">
+    <h2>Hire Talented Student Freelancers Directly</h2>
+    <p>Skill Linkr connects students with clients — fast, affordable, and reliable.</p>
+    <div class="hero-buttons">
+      <button class="btn-primary">Hire Now</button>
+      <button class="btn-secondary">Join as Student</button>
+    </div>
+  </div>
+</section>
   <!-- Header / Navbar -->
   <header>
     <div class="menu-toggle">&#9776; </div>
