--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <h3>How It Works</h3>
       <div class="cards">
         <div class="card">
+          <i class="fa fa-upload fa-2x" aria-hidden="true"></i>
           <h4>1. Post Project</h4>
           <p>Clients post their project briefs easily.</p>
         </div>
