--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Skill Linkr connects student freelancers directly with clients — fast, affordable, and reliable.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
   <header>
