--- a/index.html
+++ b/index.html
@@ -68,13 +68,24 @@
     <div class="container">
       <h3>For Students</h3>
       <div class="cards">
-        <div class="card">Create Profile</div>
-        <div class="card">Apply to Projects</div>
-        <div class="card">Get Verified</div>
+        <div class="card">
+        <i class="fa fa-user fa-2x"></i>
+          <h4>Create Profile</h4>
+        <p>Build a portfolio showcasing your skills and projects.</p>
+      </div>
+      <div class="card">
+        <i class="fa fa-briefcase fa-2x"></i>
+        <h4>Apply to Projects</h4>
+        <p>Find freelance projects and submit proposals easily.</p>
+      </div>
+      <div class="card">
+        <i class="fa fa-check-circle fa-2x"></i>
+        <h4>Get Verified</h4>
+        <p>Earn credibility and boost your chances of getting hired.</p>
       </div>
     </div>
-  </section>
-
+  </div>
+</section>
   <!-- Clients Section -->
   <section id="clients">
     <div class="container">
