--- a/index.html
+++ b/index.html
@@ -91,12 +91,24 @@
     <div class="container">
       <h3>For Clients</h3>
       <div class="cards">
-        <div class="card">Post Briefs</div>
-        <div class="card">Review Portfolios</div>
-        <div class="card">Pay Safely</div>
+     <div class="card">
+        <i class="fa fa-pencil-alt fa-2x"></i>
+        <h4>Post Briefs</h4>
+        <p>Easily share your project requirements with students.</p>
+      </div>
+      <div class="card">
+        <i class="fa fa-search fa-2x"></i>
+        <h4>Review Portfolios</h4>
+        <p>Check student portfolios to find the perfect match for your project.</p>
+      </div>
+      <div class="card">
+        <i class="fa fa-dollar-sign fa-2x"></i>
+        <h4>Pay Safely</h4>
+        <p>Securely pay students after project completion.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>  
 
   <!-- Pricing Section -->
   <section id="pricing">
