--- a/index.html
+++ b/index.html
@@ -115,12 +115,27 @@
     <div class="container">
       <h3>Pricing</h3>
       <div class="cards">
-        <div class="card">Basic - Free</div>
-        <div class="card">Pro - ₹99/mo</div>
-        <div class="card">Client - Pay per project</div>
+        div class="card">
+        <h4>Basic</h4>
+        <p>Free</p>
+        <p>Access to limited projects and profile</p>
+        <button class="btn-primary">Choose Plan</button>
+      </div>
+      <div class="card popular">
+        <h4>Pro</h4>
+        <p>₹99 / month</p>
+        <p>Unlimited projects & featured profile</p>
+        <button class="btn-primary">Choose Plan</button>
+      </div>
+      <div class="card">
+        <h4>Client</h4>
+        <p>Pay per project</p>
+        <p>Post projects and hire students easily</p>
+        <button class="btn-primary">Choose Plan</button>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Contact Section -->
   <section id="contact">
