--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="container">
       <h3>Pricing</h3>
       <div class="cards">
-        div class="card">
+        <div class="card">
         <h4>Basic</h4>
         <p>Free</p>
         <p>Access to limited projects and profile</p>
