--- a/index.html
+++ b/index.html
@@ -152,11 +152,22 @@
 
   <!-- Footer -->
   <footer>
-    <div class="container">
-      <p>© 2025 Skill Linkr — Connecting Students with Clients</p>
+  <div class="container footer-container">
+    <div class="footer-left">
+      <h4><span>Skill</span> Linkr</h4>
+      <p>Connecting students with clients directly.</p>
     </div>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+    <div class="footer-right">
+      <p>Follow us:</p>
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>© 2025 Skill Linkr — All rights reserved.</p>
+  </div>
+</footer>
 </html>
