--- a/index.html
+++ b/index.html
@@ -13,20 +13,19 @@
   <header>
     <div class="menu-toggle">&#9776; </div>
       <div class="container">
-  <nav class="navbar">
   <div class="logo">
-    <img src="images/logo.png" alt="Skill Linkr Logo" />
-    <span>Skill Linkr</span>
-  </div>
-  <ul class="menu">
-    <li><a href="#home">Home</a></li>
-    <li><a href="#how">How It Works</a></li>
-    <li><a href="#students">For Students</a></li>
-    <li><a href="#clients">For Clients</a></li>
-    <li><a href="#pricing">Pricing</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
+        <h1><span>Skill</span> Linkr</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#how">How It Works</a></li>
+          <li><a href="#students">For Students</a></li>
+          <li><a href="#clients">For Clients</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
   <!-- Hero Section -->
