--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <header>
  <header>
   <nav class="navbar">
-    <div class="logo"><span class="blue">Skill</span> Linkr</div>
+    div class="menu-toggle">&#9776; </div>
+      <div class="container">
+  <div class="logo">
+        <h1><span>Skill</span> Linkr</h1>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="for-students.html">For Students</a></li>
@@ -23,8 +25,7 @@
     </ul>
   </nav>
 </header>
-
-  </header>
+  </body>
   <!-- Hero Section -->
   <section id="home" class="hero">
     <div class="container">
