--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
  <header>
+   <div class="menu-toggle">&#9776; </div>
   <nav class="navbar">
-    div class="menu-toggle">&#9776; </div>
       <div class="container">
   <div class="logo">
         <h1><span>Skill</span> Linkr</h1>
