--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
 </head>
 <body>
  <header>
-   <div class="menu-toggle">&#9776; </div>
-  <nav class="navbar">
+  <div class="menu-toggle">&#9776; </div>
       <div class="container">
   <div class="logo">
         <h1><span>Skill</span> Linkr</h1>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="for-students.html">For Students</a></li>
-      <li><a href="for-clients.html">For Clients</a></li>
-      <li><a href="pricing.html">Pricing</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#how">How It Works</a></li>
+          <li><a href="#students">For Students</a></li>
+          <li><a href="#clients">For Clients</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
 </header>
   </body>
   <!-- Hero Section -->
