--- a/for-students.html
+++ b/for-students.html
@@ -7,15 +7,55 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header> ...navbar here... </header>
+  <!-- Navbar (same as index.html) -->
+  <header>
+    <nav class="navbar">
+      <div class="logo"><span class="blue">Skill</span> Linkr</div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="for-students.html" class="active">For Students</a></li>
+        <li><a href="for-clients.html">For Clients</a></li>
+        <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <main>
-    <section class="student-section">
-      <h1>Grow Your Freelance Career with Skill Linkr</h1>
-      <p>Get real projects, build your portfolio, and earn while learning.</p>
-      <a href="contact.html" class="btn">Join Now</a>
-    </section>
-  </main>
+  <!-- Hero Section -->
+  <section class="hero-student">
+    <h1>Grow Your Freelance Career</h1>
+    <p>Get real projects, earn experience, and build your portfolio with Skill Linkr.</p>
+    <a href="contact.html" class="btn">Join Now</a>
+  </section>
+
+  <!-- Benefits Section -->
+  <section class="benefits">
+    <h2>Why Join Skill Linkr?</h2>
+    <div class="benefit-grid">
+      <div class="card">
+        <h3>✅ Real-World Projects</h3>
+        <p>Work directly with real clients and strengthen your skills.</p>
+      </div>
+      <div class="card">
+        <h3>💼 Build Your Portfolio</h3>
+        <p>Showcase your best work and impress future employers.</p>
+      </div>
+      <div class="card">
+        <h3>💸 Earn While You Learn</h3>
+        <p>Get paid fairly for every project you complete.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- How It Works -->
+  <section class="steps">
+    <h2>How It Works</h2>
+    <ol>
+      <li>Sign up as a student freelancer.</li>
+      <li>Browse available projects.</li>
+      <li>Submit your work and get paid instantly.</li>
+    </ol>
+  </section>
 
   <footer>
     <p>© 2025 Skill Linkr | Connecting Student Freelancers with Clients</p>
