--- a/for-students.html
+++ b/for-students.html
@@ -8,18 +8,26 @@
 </head>
 <body>
   <!-- Navbar (same as index.html) -->
-  <header>
-    <nav class="navbar">
-      <div class="logo"><span class="blue">Skill</span> Linkr</div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="for-students.html" class="active">For Students</a></li>
-        <li><a href="for-clients.html">For Clients</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+ <body>
+ <header>
+  <div class="menu-toggle">&#9776; </div>
+      <div class="container">
+  <div class="logo">
+        <h1><span>Skill</span> Linkr</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="for-students.html">For Students</a></li>
+          <li><a href="for-client.html">For Clients</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
+        </ul>
+      </nav>
+    </div>
+</header>
+  </body>
 
   <!-- Hero Section -->
   <section class="hero-student">
