--- a/for-students.html
+++ b/for-students.html
@@ -54,17 +54,24 @@
       </div>
     </div>
   </section>
-
   <!-- How It Works -->
   <section class="steps">
     <h2>How It Works</h2>
-    <ol>
-      <li>Sign up as a student freelancer.</li>
-      <li>Browse available projects.</li>
-      <li>Submit your work and get paid instantly.</li>
-    </ol>
+    <div class="step-grid">
+      <div class="card">
+        <h3>✅ Sign up as a student freelancer.</h3>
+        <p>Work directly with real clients and strengthen your skills.</p>
+      </div>
+      <div class="card">
+        <h3>💼 Browse available projects.</h3>
+        <p>Showcase your best work and impress future employers.</p>
+      </div>
+      <div class="card">
+        <h3>💸 Submit your work and get paid instantly.</h3>
+        <p>Get paid fairly for every project you complete.</p>
+      </div>
+    </div>
   </section>
-
   <footer>
     <p>© 2025 Skill Linkr | Connecting Student Freelancers with Clients</p>
   </footer>
