--- a/for-client.html
+++ b/for-client.html
@@ -34,4 +34,46 @@
     <div class="benefit-grid">
       <div class="card">
         <h3>⚡ Fast Turnaround</h3>
-        <p>Students deliver projec
+        <p>Students deliver projects quickly with full focus and energy.</p>
+      </div>
+      <div class="card">
+        <h3>💰 Cost-Effective</h3>
+        <p>Get top-quality work at a fraction of agency or pro freelancer rates.</p>
+      </div>
+      <div class="card">
+        <h3>🌟 Fresh Talent</h3>
+        <p>Access a pool of motivated students who bring new ideas to your projects.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- How It Works -->
+  <section class="steps">
+    <h2>How It Works</h2>
+    <div class="steps-grid">
+      <div class="step">
+        <h3>1. Post Your Project</h3>
+        <p>Share what you need — design, video editing, content, or coding.</p>
+      </div>
+      <div class="step">
+        <h3>2. Get Matched</h3>
+        <p>We connect you to verified student freelancers with the right skills.</p>
+      </div>
+      <div class="step">
+        <h3>3. Review & Pay</h3>
+        <p>Approve the work and release secure payments directly through Skill Linkr.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA Section -->
+  <section class="cta">
+    <h2>Ready to Hire Your First Student?</h2>
+    <a href="contact.html" class="btn">Get Started</a>
+  </section>
+
+  <footer>
+    <p>© 2025 Skill Linkr | Connecting Student Freelancers with Clients</p>
+  </footer>
+</body>
+</html>
