--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="for-students.html">For Students</a></li>
-        <li><a href="for-clients.html">For Clients</a></li>
+        <li><a href="for-client.html">For Clients</a></li>
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="about.html" class="active">About</a></li>
