--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact | Skill Linkr</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title> Contact Us | Skill Linkr</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Navbar -->
+  <!-- Navbar (same as index.html) -->
+ <body>
  <header>
   <div class="menu-toggle">&#9776; </div>
       <div class="container">
@@ -26,7 +27,7 @@
       </nav>
     </div>
 </header>
-</body>
+  </body>
   
   <!-- Hero -->
   <section class="hero-contact">
