--- a/about.html
+++ b/about.html
@@ -3,25 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | Skill Linkr</title>
+  <title> About Us | Skill Linkr</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Navbar -->
-  <header>
-    <nav class="navbar">
-      <div class="logo"><span class="blue">Skill</span> Linkr</div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="for-students.html">For Students</a></li>
-        <li><a href="for-client.html">For Clients</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-      </ul>
-    </nav>
-  </header>
-</body>
+  <!-- Navbar (same as index.html) -->
+ <body>
+ <header>
+  <div class="menu-toggle">&#9776; </div>
+      <div class="container">
+  <div class="logo">
+        <h1><span>Skill</span> Linkr</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="for-students.html">For Students</a></li>
+          <li><a href="for-client.html">For Clients</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
+        </ul>
+      </nav>
+    </div>
+</header>
+  </body>
   <!-- Hero -->
   <section class="hero-about">
     <h1>About Skill Linkr</h1>
