--- a/contact.html
+++ b/contact.html
@@ -3,30 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us | Skill Linkr</title>
+  <title> Contact Us | Skill Linkr</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
   <!-- Navbar (same as index.html) -->
+ <body>
  <header>
-  <nav class="navbar">
-    <div class="logo"><span class="blue">Skill</span> Linkr</div>
-
-    <!-- Hamburger Icon -->
-    <div class="menu-toggle" id="menu-toggle">
-      ☰
+  <div class="menu-toggle">&#9776; </div>
+      <div class="container">
+  <div class="logo">
+        <h1><span>Skill</span> Linkr</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="for-students.html">For Students</a></li>
+          <li><a href="for-client.html">For Clients</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
+        </ul>
+      </nav>
     </div>
-
-    <!-- Navbar Links -->
-    <ul class="nav-links" id="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="for-students.html">For Students</a></li>
-      <li><a href="for-clients.html">For Clients</a></li>
-      <li><a href="pricing.html">Pricing</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="about.html">About</a></li>
-    </ul>
-  </nav>
 </header>
   </body>
   
