--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>COLLEGE MANAGENENT SYSTEM</title>
+  <title>Skill Linkr - Student Freelancer Platform</title>
   <meta name="description" content="Skill Linkr connects student freelancers directly with clients — fast, affordable, and reliable.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
