--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+  <body>
+
+    <div class="container">
+        
+        <section id="login-section">
+            <h2>🏛️ CMS Admin Login</h2>
+            <form id="loginForm">
+                <div class="input-group">
+                    <label for="username">Username (Test: admin):</label>
+                    <input type="text" id="username" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password (Test: 123):</label>
+                    <input type="password" id="password" required>
+                </div>
+                <button type="submit">Login</button>
+                <p id="message" style="margin-top: 15px; font-weight: bold;"></p>
+            </form>
+        </section>
 <body>
  <header>
   <div class="menu-toggle">&#9776; </div>
