--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-  <body>
+<body><body>
 
     <div class="container">
         
@@ -28,7 +28,6 @@
                 <p id="message" style="margin-top: 15px; font-weight: bold;"></p>
             </form>
         </section>
-<body>
  <header>
   <div class="menu-toggle">&#9776; </div>
       <div class="container">
