--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html">About Us</a></li>
-                       <li><a href="login.html" class="btn-login">Login</a></li>
         </ul>
       </nav>
     </div>
 </header>
   </body>
-    <section id="home" class="hero">
+  <!-- Hero Section -->
+  <section id="home" class="hero">
     <div class="container">
       <h2>Hire Talented Student Freelancers Directly</h2>
       <p>Skill Linkr connects students with clients — fast, affordable, and reliable.</p>
@@ -41,7 +41,8 @@
     </div>
   </section>
 
-    <section id="how">
+  <!-- How It Works Section -->
+  <section id="how">
     <div class="container">
       <h3>How It Works</h3>
       <div class="cards">
@@ -62,7 +63,8 @@
     </div>
   </section>
 
-    <section id="students">
+  <!-- Students Section -->
+  <section id="students">
     <div class="container">
       <h3>For Students</h3>
       <div class="cards">
@@ -84,7 +86,8 @@
     </div>
   </div>
 </section>
-    <section id="clients">
+  <!-- Clients Section -->
+  <section id="clients">
     <div class="container">
       <h3>For Clients</h3>
       <div class="cards">
@@ -107,7 +110,8 @@
   </div>
 </section>  
 
-    <section id="pricing">
+  <!-- Pricing Section -->
+  <section id="pricing">
     <div class="container">
       <h3>Pricing</h3>
       <div class="cards">
@@ -133,7 +137,8 @@
   </div>
 </section>
 
-    <section id="contact">
+  <!-- Contact Section -->
+  <section id="contact">
     <div class="container">
       <h3>Contact</h3>
       <form id="contactForm">
@@ -145,7 +150,8 @@
     </div>
   </section>
 
-    <footer>
+  <!-- Footer -->
+  <footer>
   <div class="container footer-container">
     <div class="footer-left">
       <h4><span>Skill</span> Linkr</h4>
