--- a/dashboard.html
+++ b/dashboard.html
@@ -17,15 +17,16 @@
         <h1><span>Skill</span> Linkr</h1>
       </div>
       <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="for-students.html">For Students</a></li>
-          <li><a href="for-client.html">For Clients</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">About Us</a></li>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="for-students.html">For Students</a></li>
+          <li><a href="for-client.html">For Clients</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="login.html" class="btn-login">Login</a></li>         
         </ul>
-      </nav>
+      </nav>
     </div>
 </header>
   </body>
