--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <h2>Login to Skill Linkr</h2>
         <form action="dashboard.html" method="GET"> 
              <input type="text" name="username" placeholder="Enter Your Name" required>
+             <input type="text" name="password" placeholder="Enter Your Password" required>
             <button type="submit" class="btn-primary">Login Now</button>
         </form>
     </div>
