--- a/index.html
+++ b/index.html
@@ -47,12 +47,24 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="logo">
-                <h1><span>Skill</span> Linkr</h1>
-        
-    </header>
+ <header>
+  <div class="menu-toggle">&#9776; </div>
+      <div class="container">
+  <div class="logo">
+        <h1><span>Skill</span> Linkr</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="for-students.html">For Students</a></li>
+          <li><a href="for-client.html">For Clients</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
+        </ul>
+      </nav>
+    </div>
+</header>
 
     <div class="login-container">
         <h2>Login to Skill Linkr</h2>
