--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html">About Us</a></li>
+          <li><a href="index.html">Log Out</a></li>
         </ul>
       </nav>
     </div>
