Update Home link to point to dashboard.html

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="dashboard.html">Home</a></li>
           <li><a href="for-students.html">For Students</a></li>
           <li><a href="for-client.html">For Clients</a></li>
           <li><a href="pricing.html">Pricing</a></li>
