--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+ <body>
  <header>
   <div class="menu-toggle">&#9776; </div>
       <div class="container">
@@ -17,16 +17,16 @@
         <h1><span>Skill</span> Linkr</h1>
       </div>
       <nav>
-        <ul>
-          <li><a href="dashboard.html">Home</a></li>
-          <li><a href="for-students.html">For Students</a></li>
-          <li><a href="for-client.html">For Clients</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><<a href="index.html" class="btn-logout">Logout</a></li>         
+        <ul>
+          <li><a href="dashboard.html">Home</a></li>
+          <li><a href="for-students.html">For Students</a></li>
+          <li><a href="for-client.html">For Clients</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="index.html">Log Out</a></li>
         </ul>
-      </nav>
+      </nav>
     </div>
 </header>
   </body>
