--- a/for-client.html
+++ b/for-client.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Navbar (same as other pages) -->
-   <header>
+ <header>
   <div class="menu-toggle">&#9776; </div>
       <div class="container">
   <div class="logo">
@@ -16,12 +16,13 @@
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="dashboard.html">Home</a></li>
           <li><a href="for-students.html">For Students</a></li>
           <li><a href="for-client.html">For Clients</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html">About Us</a></li>
+          <li><a href="index.html">Log Out</a></li>
         </ul>
       </nav>
     </div>
