Update text to emphasize student freelancers

--- a/for-client.html
+++ b/for-client.html
@@ -30,8 +30,8 @@
 </body>
   <!-- Hero Section -->
   <section class="hero-clients">
-    <h1>Hire Talented Students at Affordable Rates</h1>
-    <p>Get your projects done quickly by skilled students — smart, creative, and ready to deliver.</p>
+    <h1>Hire Talented Student Freelancer at Affordable Rates</h1>
+    <p>Get your projects done quickly by skilled student freelancers — smart, creative, and ready to deliver.</p>
     <a href="contact.html" class="btn">Hire Now</a>
   </section>
 
@@ -41,7 +41,7 @@
     <div class="benefit-grid">
       <div class="card">
         <h3>⚡ Fast Turnaround</h3>
-        <p>Students deliver projects quickly with full focus and energy.</p>
+        <p>Student freelancer deliver projects quickly with full focus and energy.</p>
       </div>
       <div class="card">
         <h3>💰 Cost-Effective</h3>
@@ -49,7 +49,7 @@
       </div>
       <div class="card">
         <h3>🌟 Fresh Talent</h3>
-        <p>Access a pool of motivated students who bring new ideas to your projects.</p>
+        <p>Access a pool of motivated student freelancer who bring new ideas to your projects.</p>
       </div>
     </div>
   </section>
@@ -75,7 +75,7 @@
 
   <!-- CTA Section -->
   <section class="cta">
-    <h2>Ready to Hire Your First Student?</h2>
+    <h2>Ready to Hire Your First Student Freelancer?</h2>
     <a href="contact.html" class="btn">Get Started</a>
   </section>
 
