--- a/dashboard.html
+++ b/dashboard.html
@@ -164,9 +164,10 @@
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://www.instagram.com/radheyvallabh8/" target="_blank">
-          <img src="instagram.png" alt="Instagram" width="30">
-        </a>
+       <a href="https://www.instagram.com/radheyvallabh8/" target="_blank">
+       <i class="fab fa-instagram"></i>
+       </a>
+
 
       </div>
     </div>
