--- a/about.html
+++ b/about.html
@@ -82,6 +82,19 @@
       <div class="founder-text">
         <h2>Meet Our Founder</h2>
         <h3>Adarsh Shukla</h3>
+         <div class="footer-right">
+      <p>Connect with Our Founder:</p>
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+       <a href="https://www.instagram.com/radheyvallabh8/" target="_blank">
+       <i class="fab fa-instagram"></i>
+       </a>
+
+
+      </div>
+    </div>
         <p>
           Adarsh is a passionate Computer Science student, entrepreneur, and
           founder of Skill Linkr. His mission is to empower students like
