Refactor founder section with improved structure

--- a/about.html
+++ b/about.html
@@ -76,38 +76,72 @@
   </section>
 
   <!-- Founder Section -->
-  <section class="founder">
-    <div class="container founder-box">
-      <img src="assets/founder.png" alt="Adarsh Shukla" class="founder-img" />
-      <div class="founder-text">
-        <h2>Meet Our Founder</h2>
-        <h3>Adarsh Shukla</h3>
-         <div class="footer-right">
-      <p>Connect with Our Founder:</p>
-      <div class="social-icons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-       <a href="https://www.instagram.com/radheyvallabh8/" target="_blank">
-       <i class="fab fa-instagram"></i>
-       </a>
+<section class="founder">
+  <div class="container founder-box">
+    <img src="assets/founder.png" alt="Adarsh Shukla" class="founder-img" />
 
+    <div class="founder-text">
+      <h2>Meet Our Founder</h2>
+      <h3>Adarsh Shukla</h3>
 
+      <!-- Connect with Founder -->
+      <div class="founder-social">
+        <span>Connect with Founder</span>
+        <a
+          href="https://www.instagram.com/radheyvallabh8/"
+          target="_blank"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
       </div>
+
+      <p>
+        Adarsh is a passionate Computer Science student, entrepreneur, and
+        founder of Skill Linkr. His mission is to empower students like
+        himself to gain confidence, financial independence, and professional
+        growth through freelancing.
+      </p>
+
+      <p>
+        He believes that true education happens when skills meet
+        opportunities — and Skill Linkr is his step toward that vision.
+      </p>
     </div>
-        <p>
-          Adarsh is a passionate Computer Science student, entrepreneur, and
-          founder of Skill Linkr. His mission is to empower students like
-          himself to gain confidence, financial independence, and professional
-          growth through freelancing.
-        </p>
-        <p>
-          He believes that true education happens when skills meet
-          opportunities — and Skill Linkr is his step toward that vision.
-        </p>
+  </div>
+</section>
+<section class="founder">
+  <div class="container founder-box">
+    <img src="assets/founder.png" alt="Adarsh Shukla" class="founder-img" />
+
+    <div class="founder-text">
+      <h2>Meet Our Founder</h2>
+      <h3>Adarsh Shukla</h3>
+
+      <!-- Connect with Founder -->
+      <div class="founder-social">
+        <span>Connect with Founder</span>
+        <a
+          href="https://www.instagram.com/radheyvallabh8/"
+          target="_blank"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
       </div>
+
+      <p>
+        Adarsh is a passionate Computer Science student, entrepreneur, and
+        founder of Skill Linkr. His mission is to empower students like
+        himself to gain confidence, financial independence, and professional
+        growth through freelancing.
+      </p>
+
+      <p>
+        He believes that true education happens when skills meet
+        opportunities — and Skill Linkr is his step toward that vision.
+      </p>
     </div>
-  </section>
+  </div>
+</section>
 
   <footer>
     <p>© 2025 Skill Linkr | Created with ❤️ by Adarsh Shukla</p>
