--- a/about.html
+++ b/about.html
@@ -90,6 +90,7 @@
           target="_blank"
         >
           <i class="fab fa-instagram"></i>
+            rel="noopener noreferrer"
         </a>
       </div>
 
