--- a/about.html
+++ b/about.html
@@ -88,8 +88,10 @@
         <a
           href="https://www.instagram.com/radheyvallabh8/"
           target="_blank"
-           rel="noopener noreferrer"
+          rel="noopener noreferrer"
+          class="insta-link"
         >
+          @radheyvallabh8
           <i class="fab fa-instagram"></i>
         </a>
       </div>
