--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
   </section>
 <section class="founder">
   <div class="container founder-box">
-    <img src="assets/founder.png" alt="Adarsh Shukla" class="founder-img" />
+    <img src="ADARSH1.jpg" alt="Adarsh Shukla" class="founder-img" />
 
     <div class="founder-text">
       <h2>Meet Our Founder</h2>
