--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,8 @@
       <!-- Info -->
       <div class="contact-info">
         <h2>Get in Touch</h2>
-        <p><strong>Email:</strong> support@skilllinkr.com</p>
-        <p><strong>Phone:</strong> +91 98765 43210</p>
+        <p><strong>Email:</strong> skilllinkr@gmail.com</p>
+        <p><strong>Phone:</strong> +91 9694793883</p>
         <p><strong>Location:</strong> Gonda, Uttar Pradesh</p>
         <p>We usually reply within 24 hours.</p>
       </div>
