--- a/dashboard.html
+++ b/dashboard.html
@@ -13,9 +13,10 @@
  <header>
   <div class="menu-toggle">&#9776; </div>
       <div class="container">
-  <div class="logo">
-        <h1><span>Skill</span> Linkr</h1>
-      </div>
+        <div class="logo">
+  <img src="_Skill Linkr Personal Logo (1).png" alt="Logo">
+</div>
+
       <nav>
         <ul>
           <li><a href="dashboard.html">Home</a></li>
