--- a/for-client.html
+++ b/for-client.html
@@ -12,8 +12,8 @@
   <div class="menu-toggle">&#9776; </div>
       <div class="container">
   <div class="logo">
-        <h1><span>Skill</span> Linkr</h1>
-      </div>
+  <img src="_Skill Linkr Personal Logo (1).png" alt="Logo">
+</div>
       <nav>
         <ul>
           <li><a href="dashboard.html">Home</a></li>
