--- a/for-students.html
+++ b/for-students.html
@@ -11,9 +11,9 @@
  <header>
   <div class="menu-toggle">&#9776; </div>
       <div class="container">
-  <div class="logo">
-        <h1><span>Skill</span> Linkr</h1>
-      </div>
+   <div class="logo">
+  <img src="_Skill Linkr Personal Logo (1).png" alt="Logo">
+</div>
       <nav>
         <ul>
           <li><a href="dashboard.html">Home</a></li>
