--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   <div class="menu-toggle">&#9776; </div>
       <div class="container">
   <div class="logo">
-        <h1><span>Skill</span> Linkr</h1>
-      </div>
+  <img src="_Skill Linkr Personal Logo (1).png" alt="Logo">
+</div>
       <nav>
         <ul>
           <li><a href="pricing.html">Pricing</a></li>
