--- a/pricing.html
+++ b/pricing.html
@@ -54,7 +54,7 @@
         <h2>₹999</h2>
         <p>Per Mid-Level Project</p>
         <ul>
-          <li>✅ Experienced Student</li>
+          <li>✅ Experienced Student Freelancer</li>
           <li>✅ Priority Delivery</li>
           <li>✅ 24/7 Support</li>
         </ul>
@@ -66,7 +66,7 @@
         <h2>₹1999</h2>
         <p>Per Advanced Project</p>
         <ul>
-          <li>✅ Team of 2–3 Students</li>
+          <li>✅ Team of 2–3 Student Freelancers</li>
           <li>✅ Fastest Turnaround</li>
           <li>✅ Dedicated Manager</li>
         </ul>
