--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
       <nav>
         <ul>
-          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="pricings.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html">About Us</a></li> 
         </ul>
