--- a/pricings.html
+++ b/pricings.html
@@ -19,9 +19,9 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="index.html">For Students</a></li>
           <li><a href="index.html">For Clients</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="pricings.html">Pricing</a></li>
           <li><a href="contactme.html">Contact</a></li>
-          <li><a href="about.html">About Us</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
           <li><a href="index.html">Log Out</a></li>
         </ul>
       </nav>
