--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <nav>
         <ul>
           <li><a href="pricings.html">Pricing</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">About Us</a></li> 
+          <li><a href="contactme.html">Contact</a></li>
+          <li><a href="aboutus.html">About Us</a></li> 
         </ul>
       </nav>
     </div>
