--- a/aboutus.html
+++ b/aboutus.html
@@ -16,12 +16,12 @@
 </div>
       <nav>
         <ul>
-          <li><a href="dashboard.html">Home</a></li>
-          <li><a href="for-students.html">For Students</a></li>
-          <li><a href="for-client.html">For Clients</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">About Us</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">For Students</a></li>
+          <li><a href="index.html">For Clients</a></li>
+          <li><a href="pricings.html">Pricing</a></li>
+          <li><a href="contactme.html">Contact</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
           <li><a href="index.html">Log Out</a></li>
         </ul>
       </nav>
