--- a/aboutus.html
+++ b/aboutus.html
@@ -39,10 +39,10 @@
     <div class="container">
       <h2>Our Story</h2>
       <p>
-        Skill Linkr was founded with a simple idea — to give talented students a
-        fair chance to earn, grow, and prove their skills through real-world
+        Skill Linkr is founded with a simple idea — to give talented students a
+        fair chance to earn, grow & prove their skills through real-world
         projects. Many students struggle to find opportunities despite having
-        the right talent, and small businesses or startups struggle to afford
+        the right talent & small businesses or startups struggle to afford
         skilled freelancers.
       </p>
       <p>
