--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
       <div class="contact-form">
         <h2>Send a Message</h2>
         <form id="contactForm" action="#" method="POST">
-          <label for="name">Full Name</label>
+          <label for="name">Your Full Name</label>
           <input type="text" id="name" name="name" placeholder="Your name" required>
 
           <label for="email">Email</label>
@@ -63,7 +63,7 @@
         <h2>Get in Touch</h2>
         <p><strong>Email:</strong> skilllinkr@gmail.com</p>
         <p><strong>Phone:</strong> +91 9694793883</p>
-        <p><strong>Location:</strong> Gonda, Uttar Pradesh</p>
+        <p><strong>Location:</strong> Meerut, Uttar Pradesh</p>
         <p>We usually reply within 24 hours.</p>
       </div>
     </div>
