--- a/aboutus.html
+++ b/aboutus.html
@@ -47,7 +47,7 @@
       </p>
       <p>
         Skill Linkr bridges that gap by connecting student freelancers directly
-        with clients at minimal prices — creating a win-win ecosystem for both.
+        with clients at minimal prices — creating a win-win ecosystem for both freelancers & clients or startups.
       </p>
     </div>
   </section>
