--- a/dashboard.html
+++ b/dashboard.html
@@ -35,10 +35,10 @@
   <section id="home" class="hero">
     <div class="container">
       <h2>Hire Talented Student Freelancers Directly</h2>
-      <p>Skill Linkr connects students with clients — fast, affordable, and reliable.</p>
+      <p>Skill Linkr connects students with clients — fast, affordable & reliable.</p>
       <div class="hero-buttons">
         <button class="btn-primary">Hire Now</button>
-        <button class="btn-secondary">Join as Student</button>
+        <button class="btn-secondary">Join as Student Freelancer</button>
       </div>
     </div>
   </section>
