--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skill Linkr - Login</title>
-    <link rel="stylesheet" href="css/common.css">
-<link rel="stylesheet" href="css/login.css">
+   <link rel="stylesheet" href="css/common.css">
+   <link rel="stylesheet" href="css/login.css">
+
 
 </head>
 <body>
@@ -25,14 +26,16 @@
     </div>
 </header>
 
-    <div class="login-container">
-        <h2>Login to Skill Linkr</h2>
-        <form action="dashboard.html" method="GET"> 
-             <input type="text" name="username" placeholder="Enter Your Name" required>
-             <input type="text" name="password" placeholder="Enter Your Password" required>
-            <button type="submit" class="btn-primary">Login Now</button>
-        </form>
-    </div>
+<div class="login-container">
+  <h2>Login to Skill Linkr</h2>
+
+  <form>
+    <input type="text" placeholder="Enter Your Name">
+    <input type="password" placeholder="Enter Your Password">
+    <button class="btn-primary">Login Now</button>
+  </form>
+</div>
+
     
     <footer>
         <div class="footer-bottom">
