--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skill Linkr - Login</title>
-   <link rel="stylesheet" href="css/common.css">
-   <link rel="stylesheet" href="css/login.css">
+ <link rel="stylesheet" href="style.css">
+
 
 
 </head>
