--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <input type="text" placeholder="Enter Your Name">
     <input type="password" placeholder="Enter Your Password">
     <button class="btn-primary">Login Now</button>
+    <form action="dashboard.html" method="GET">
   </form>
 </div>
 
